fixes issue with data not being put in the correct directory

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Download and Prepare Data
         run: |
           mkdir -p ./data/${{ github.event.inputs.branch }}
-          mv ./temp/results.json ./data/${{ github.event.inputs.branch }}/${{ github.event.inputs.commit }}.json
+          mv ./temp/results.json ./data/${{ github.event.inputs.platform }}/${{ github.event.inputs.architecture }}/${{ github.event.inputs.branch }}/${{ github.event.inputs.commit }}.json
           rm -rf ./temp/
 
       - name: Setup Python Deps
