Added historical data Added missing branch handling Added better --add-dir behaviour

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 {
     "data": "./data/",
     "database": "./data/database.db",
-    "output": "./out/"
+    "output": "./out/",
+    "main-branch": "develop"
 }
